Changes in @NEW@:
  o Bug Fixes:
    * Conary now resets the timeStamps in all cases when getSourceVersion is 
      called (CNY-708).
    * Sqlite ANALYZE locks the database after it is run, causing updates to
      fail.
    * Lists in configure files (for example, installLabelPath) now allow there 
      to be more than one space between items.
    * Locally changed files weren't marked properly in rollbacks which were
      stored locally (incluing rollbacks for locally built troves) (CNY-645)

  o Build Changes:
    * Conary now recognizes that pkgconfig finds its files in
      /usr/share/pkgconfig as well as /usr/lib*/pkgconfig. (CNY-754)
    * Added the /etc/conary/mirrors/cran file to enable mirror://
      references to the Comprehensive R Archive Network. (CNY-761)
 
Changes in 1.0.27:
  o Client Changes:
    * A "files preupdate" tag script method has been Implemented which
      gets run before tagged files are installed or changed. (CNY-636)
    * A bug that could cause "--replace-files" to remove ownership
      from every file in a trove has been fixed. (CNY-733)

    * Multiple bugs where using "--replace-files" could result in the
      new file having no owner have been fixed. (CNY-733)
    * The logcat script now supports revision 1 log entries.
    * The logcat script is now installed to /usr/share/conary/logcat

  o Build Changes:
    * Improved handling of the "package=" keyword argument for build
      actions.  In particular, made it available to all build actions,
      removed double-applying macros to the package specification,
      and fixed failure in cases like "MakeInstall(dir=doesnotexist,
      skipMissingDir=True, package=...)". (CNY-737, CNY-738)
    * The lookaside cache now looks in the repository for local sources
      when doing a repository cook. (CNY-744)
    * The mirror:// pseudo-URL handling now detects bad mirrors that
      provide an HTML document instead of the real archive when a